--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -7548,6 +7548,10 @@ p {
   line-height: 1.8em;
   font-family: "Open Sans", sans-serif; }
 
+.site-main {
+  max-width: 960px;
+  margin: 0 auto; }
+
 .wrapper {
   padding: 80px 0; }
 
@@ -7562,9 +7566,6 @@ p {
 
 h2.entry-title {
   font-family: 90% "Open Sans Condensed", sans-serif; }
-
-* {
-  box-sizing: border-box; }
 
 .video-background {
   background: #000;
@@ -7583,3 +7584,8 @@ h2.entry-title {
   width: 100%;
   height: 100%;
   pointer-events: none; }
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 100%;
+    margin: 0 auto; } }
