--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -14,9 +14,16 @@ p {
 	font-family: $font-stack;
 }
 
+
+.site-main{
+	max-width: 960px;
+	margin: 0 auto;
+	}
+
 .wrapper {
 	padding: 80px 0;
 }
+
 
  .special-home h2{
 	font-family: $font-title;
@@ -34,7 +41,6 @@ h2.entry-title {
 	font-family: 90% $post-title;	
 }
 
-* { box-sizing: border-box; }
 .video-background {
   background: #000;
   position: fixed;
@@ -50,3 +56,10 @@ h2.entry-title {
   height: 100%;
   pointer-events: none;
 }
+
+@media (min-width: 1200px){
+.container {
+    max-width: 100%;
+    margin: 0 auto;
+    }
+  }
