fix dashboard menu icons

--- a/sass/child-theme.scss
+++ b/sass/child-theme.scss
@@ -5,7 +5,7 @@
 
 //Optional files - If you don´t use the corresponding scripts/fonts comment em out
 @import "assets/font-awesome"; // <------- Font Awesome Icon font
-@import "assets/owl-carousel2"; // <------- Owl Carousel2 slider styles
+//@import "assets/owl-carousel2"; // <------- Owl Carousel2 slider styles
 
 // Any additional imported files //
 @import "theme/child_theme";  // <--------- Add your styles into this file
