cleaning up author page display

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -7365,6 +7365,14 @@ p {
 h2.entry-title {
   font-family: 90% "Open Sans Condensed", sans-serif; }
 
+.author-header .author-avatar {
+  display: inline;
+  margin-bottom: 6px; }
+
+.author-header #author-name {
+  display: inline;
+  margin-left: 12px; }
+
 .square {
   float: left;
   position: relative;
