--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -60,6 +60,7 @@ h2.entry-title {
     margin:1.66%;
     background-color: $green;
     overflow:hidden;
+    background-size: cover;
 }
 
 .content {
